Валидация данных при изменении и регистрации

--- a/cloud/templates/auth/signup.html
+++ b/cloud/templates/auth/signup.html
@@ -104,17 +104,17 @@
 
                     <div class="form-group django-control">
                         <label class="col-form-label">Университет</label>
-                        <select name="university" id="id_university" required></select>
+                        <select name="university" id="id_university"></select>
                     </div>
 
                     <div class="form-group django-control">
                         <label class="col-form-label">Факультет</label>
-                        <select name="department" id="id_department" required></select>
+                        <select name="department" id="id_department"></select>
                     </div>
 
                     <div class="form-group django-control">
                         <label class="col-form-label">Кафедра</label>
-                        <select name="chair" id="id_chair" required></select>
+                        <select name="chair" id="id_chair"></select>
                     </div>
 
                     <div class="form-group django-control">
