--- a/cloud/templates/main_template.html
+++ b/cloud/templates/main_template.html
@@ -81,6 +81,13 @@
                                                                                class="pull-right hidden-xs showopacity glyphicon glyphicon-phone-alt"></span></a>
                         </li>
 
+                        {% if user.is_superuser or user.is_staff %}
+                            <li {% block validation_active %}{% endblock %} style="background-color: #F4FF81">
+                                <a href="{% url 'validation' %}">Валидация<span style="font-size:16px;"
+                                                                        class="pull-right hidden-xs showopacity glyphicon glyphicon-certificate"></span></a>
+                            </li>
+                        {% endif %}
+
                         {% if user.is_superuser %}
                             <li style="background-color: #DBC6EB">
                                 <a href="/admin">Администрирование<span style="font-size:16px;"
