--- a/cloud/templates/cloud/post_detail.html
+++ b/cloud/templates/cloud/post_detail.html
@@ -21,6 +21,14 @@
         <div class="col-md-3 col-lg-3"></div>
         <div class="col-md-6 col-lg-6">
             <div class="post-panel">
+                {% if message %}
+                    <div class="alert alert-info alert-dismissible show" role="alert">
+                        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                        {{ message }}
+                    </div>
+                {% endif %}
                 <hr>
                 <h3 style="text-align: left; padding: 0 20px">
                     {{ post.title }}
