--- a/cloud/templates/structure/university_page.html
+++ b/cloud/templates/structure/university_page.html
@@ -18,7 +18,7 @@
                     <img class="univer-logo" src="{{ univer.logo.url }}" alt="univer-logo">
                 </div>
                 <div class="col-xs-7 col-sm-9 col-md-9 col-lg-9">
-                    <h3>{{ univer.title }}</h3>
+                    <h3 style="word-wrap: break-word">{{ univer.title }}</h3>
                     <a href="{{ univer.link }}"> официальный сайт </a>
                 </div>
             </div>
