--- a/cloud/templates/index.html
+++ b/cloud/templates/index.html
@@ -21,16 +21,17 @@
         <link rel="icon" href="{% static 'img/favicon.png' %}">
         <link rel="shortcut icon" type="image/png" href="{{STATIC_URL}}/favicon.png"/>
 
-        {% block head %}
-        {% endblock %}
-
     </head>
 
 
     <body>
 
 
-
+        <div class="row" style="min-height: 500px">
+            <div class="col-xs-12">
+                <img src="{% static 'img/piLogo.png' %}" style="vertical-align: middle">
+            </div>
+        </div>
 
 
         <script src="https://code.jquery.com/jquery-3.1.0.min.js"></script>
