Bugfix - сокрытие не проверенных постов на страницах программ

--- a/cloud/templates/settings.html
+++ b/cloud/templates/settings.html
@@ -98,7 +98,7 @@
 
             <div class="container-fluid">
                 <a href="{% url 'user_posts' user_id=user.pk %}">
-                <div class="btn btn-primary full-width">Все публикации</div>
+                <div class="btn btn-primary full-width">Все проверенные публикации</div>
                 </a>
             </div>
 
