Bugfix - положение аватара на странице пользователя

--- a/cloud/templates/user.html
+++ b/cloud/templates/user.html
@@ -14,7 +14,7 @@
 
             <div class="row">
                 <div class="col-xs-12 col-sm-12 col-md-5 col-lg-5">
-                    <img class="avatar-settings full-width" src="{{ fr_user_info.avatar.url }}" alt="avatar">
+                    <div class="avatar-settings" style="background-image: url({{ fr_user_info.avatar.url }})"></div>
                 </div>
                 <div class="col-xs-12 col-sm-12 col-md-7 col-lg-7" style="text-align: left">
                     <table class="table">
