--- a/cloud/templates/cloud/post_detail.html
+++ b/cloud/templates/cloud/post_detail.html
@@ -78,7 +78,7 @@
                     </tr>
                     <tr>
                         <th>Автор:</th>
-                        <td>{{ post.author }}</td>
+                        <td><a href="/user/{{ post.author.pk }}">{{ post.author }}</a></td>
                     </tr>
                     <tr>
                         <th>Тип:</th>
