--- a/cloud/templates/structure/universities.html
+++ b/cloud/templates/structure/universities.html
@@ -13,6 +13,7 @@
     <div class="container-fluid no-margin-padding">
 
 
+{% comment %}
         <a href="#">
             <div class="universities">
                 <div class="container-fluid">
@@ -22,6 +23,7 @@
                 </div>
             </div>
         </a>
+{% endcomment %}
 
 
         {% for univer in univer_list %}
