--- a/cloud/templates/auth/signup.html
+++ b/cloud/templates/auth/signup.html
@@ -9,6 +9,9 @@
     class="active"
 {% endblock %}
 
+{% block head %}
+    <script src='https://www.google.com/recaptcha/api.js'></script>
+{% endblock %}
 
 {% block content %}
 
@@ -62,6 +65,11 @@
 
                     <div id="error" class="error">
                         {% if error %} <p>{{ error }}</p> {% endif %}
+                    </div>
+
+                    <div class="container-fluid" style="text-align: center; margin-bottom: 10px">
+                        <div class="g-recaptcha" style="display: inline-block"
+                             data-sitekey="6LcjsksUAAAAAEKIzQNR60uz9k1UiTO6vDEmW86k"></div>
                     </div>
 
                     <div class="form-group">
