--- a/cloud/templates/main_template.html
+++ b/cloud/templates/main_template.html
@@ -3,183 +3,194 @@
 <!doctype html>
 <html lang="ru">
 
-    <head>
-        <meta charset="utf-8">
-        <title>{% block title %}{% endblock %}</title>
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+<head>
+    <meta charset="utf-8">
+    <title>{% block title %}{% endblock %}</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-        <!-- Latest compiled and minified CSS -->
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
-              integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-        <!-- Optional theme -->
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css"
-              integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
+          integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <!-- Optional theme -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css"
+          integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
 
-        <link rel="stylesheet" href="{% static 'css/global.css' %}">
-        <link rel="stylesheet" href="{% static 'css/menu.css' %}">
-        <link href="https://fonts.googleapis.com/css?family=Roboto+Slab" rel="stylesheet">
+    <link rel="stylesheet" href="{% static 'css/global.css' %}">
+    <link rel="stylesheet" href="{% static 'css/menu.css' %}">
+    <link href="https://fonts.googleapis.com/css?family=Roboto+Slab" rel="stylesheet">
 
-        <link rel="icon" href="{% static 'img/favicon.png' %}">
-        <link rel="shortcut icon" type="image/png" href="{{STATIC_URL}}/favicon.png"/>
+    <link rel="icon" href="{% static 'img/favicon.png' %}">
+    <link rel="shortcut icon" type="image/png" href="{{ STATIC_URL }}/favicon.png"/>
 
-        {% block head %}
-        {% endblock %}
+    {% block head %}
+    {% endblock %}
 
-    </head>
+</head>
 
 
-    <body>
+<body>
 
-        <nav class="navbar navbar-default navbar-position sidebar" role="navigation">
-            <div class="container-fluid">
-                <div class="navbar-header">
-                    <button type="button" class="navbar-toggle" data-toggle="collapse"
-                            data-target="#bs-sidebar-navbar-collapse-1">
-                        <span class="sr-only">Toggle navigation</span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                    </button>
-                    <a id="menu-brand" class="navbar-brand" href="{% url 'post_list' %}"><img id="picloud-logo"
-                            src="{% static 'img/piLogo.png' %}" alt="logo"></a>
-                </div>
+<nav class="navbar navbar-default navbar-position sidebar" role="navigation">
+    <div class="container-fluid">
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle" data-toggle="collapse"
+                    data-target="#bs-sidebar-navbar-collapse-1">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a id="menu-brand" class="navbar-brand" href="{% url 'post_list' %}"><img id="picloud-logo"
+                                                                                      src="{% static 'img/piLogo.png' %}"
+                                                                                      alt="logo"></a>
+        </div>
 
-                <div class="collapse navbar-collapse" id="bs-sidebar-navbar-collapse-1">
-                    <ul class="nav navbar-nav">
-                        {% if user.is_authenticated %}
-                            <li {% block settings_active %}{% endblock %}>
-                                <a href="{% url 'settings' %}">
-                                    <div id="avatar" style="background-image: url({{ request.session.user_ava_url }})"></div>
-                                    <h3 style="margin: 0;">{{ user.username }}</h3>
-                                </a>
-                            </li>
-                        {% endif %}
+        <div class="collapse navbar-collapse" id="bs-sidebar-navbar-collapse-1">
+            <ul class="nav navbar-nav">
+                {% if user.is_authenticated %}
+                    <li {% block settings_active %}{% endblock %}>
+                        <a href="{% url 'settings' %}">
+                            <div id="avatar" style="background-image: url({{ request.session.user_ava_url }})"></div>
+                            <h3 style="margin: 0;">{{ user.username }}</h3>
+                        </a>
+                    </li>
+                {% endif %}
 
-                        {% if user.is_authenticated and request.session.program_id %}
-                            <li>
-                                <a href="{% url 'program_page' program_id=request.session.program_id %}">Моя программа<span style="font-size:16px;"
-                                                                              class="pull-right hidden-xs showopacity glyphicon glyphicon-heart"></span></a>
-                            </li>
-                        {% endif %}
+                <li {% block cloud_active %}{% endblock %}>
+                    <a href="{% url 'post_list' %}">Облако<span style="font-size:16px;"
+                                                                class="pull-right hidden-xs showopacity glyphicon glyphicon-cloud"></span></a>
+                </li>
 
-                        <li {% block cloud_active %}{% endblock %}>
-                            <a href="{% url 'post_list' %}">Облако<span style="font-size:16px;"
-                                                                        class="pull-right hidden-xs showopacity glyphicon glyphicon-cloud"></span></a>
-                        </li>
-                        <li {% block search_active %}{% endblock %}>
-                            <a href="{% url 'search' %}">Поиск<span style="font-size:16px;"
-                                                                    class="pull-right hidden-xs showopacity glyphicon glyphicon-search"></span></a>
-                        </li>
-                        {% if user.is_authenticated %}
-                            <li {% block newpost_active %}{% endblock %}>
-                                <a href="{% url 'post_new' %}">Запостить<span style="font-size:16px;"
-                                                                              class="pull-right hidden-xs showopacity glyphicon glyphicon-upload"></span></a>
-                            </li>
-                        {% endif %}
+                {% if user.is_authenticated and request.session.program_id %}
+                    <li>
+                        <a href="{% url 'program_page' program_id=request.session.program_id %}">Моя программа<span
+                                style="font-size:16px;"
+                                class="pull-right hidden-xs showopacity glyphicon glyphicon-heart"></span></a>
+                    </li>
+                {% endif %}
 
-                        {% comment %} TODO запилить мемесы
+                <li {% block search_active %}{% endblock %}>
+                    <a href="{% url 'search' %}">Поиск<span style="font-size:16px;"
+                                                            class="pull-right hidden-xs showopacity glyphicon glyphicon-search"></span></a>
+                </li>
+                {% if user.is_authenticated %}
+                    <li {% block newpost_active %}{% endblock %}>
+                        <a href="{% url 'post_new' %}">Запостить<span style="font-size:16px;"
+                                                                      class="pull-right hidden-xs showopacity glyphicon glyphicon-upload"></span></a>
+                    </li>
+                {% endif %}
+
+                {% comment %} TODO запилить мемесы
                         <li {% block memes_active %}{% endblock %}>
                             <a href="{% url 'memes' %}">Мемесы<span style="font-size:16px;"
                                                                     class="pull-right hidden-xs showopacity glyphicon glyphicon-fire"></span></a>
                         </li>
                         {% endcomment %}
 
-                        <li {% block universities_active %}{% endblock %}>
-                            <a href="{% url 'universities_list' %}">ВУЗы<span style="font-size:16px;"
-                                                                                       class="pull-right hidden-xs showopacity glyphicon glyphicon-education"></span></a>
-                        </li>
-                        <li {% block contacts_active %}{% endblock %}>
-                            <a href="{% url 'contacts' %}">Обратная связь<span style="font-size:16px;"
-                                                                               class="pull-right hidden-xs showopacity glyphicon glyphicon-phone-alt"></span></a>
-                        </li>
+                <li {% block universities_active %}{% endblock %}>
+                    <a href="{% url 'universities_list' %}">ВУЗы<span style="font-size:16px;"
+                                                                      class="pull-right hidden-xs showopacity glyphicon glyphicon-education"></span></a>
+                </li>
+                <li {% block contacts_active %}{% endblock %}>
+                    <a href="{% url 'contacts' %}">
+                        Обратная связь
+                        <span style="font-size:16px;"
+                              class="pull-right hidden-xs showopacity glyphicon glyphicon-phone-alt">
+                        </span>
+                    </a>
+                </li>
 
-                        {% if user.is_superuser or user.is_staff %}
-                            <li {% block validation_active %}{% endblock %} style="background-color: #F4FF81">
-                                <a href="{% url 'validation' %}">Валидация<span style="font-size:16px;"
-                                                                        class="pull-right hidden-xs showopacity glyphicon glyphicon-certificate"></span></a>
-                            </li>
-                        {% endif %}
+                {% if user.is_superuser or user.is_staff %}
+                    <li {% block validation_active %}{% endblock %} style="background-color: #F4FF81">
+                        <a href="{% url 'validation' %}">
+                            Модерация
+                            <span style="font-size:16px;"
+                                  class="pull-right hidden-xs showopacity glyphicon glyphicon-certificate">
+                            </span>
+                        </a>
+                    </li>
+                {% endif %}
 
-                        {% if user.is_superuser %}
-                            <li style="background-color: #DBC6EB">
-                                <a href="/admin">Администрирование<span style="font-size:16px;"
-                                                                        class="pull-right hidden-xs showopacity glyphicon glyphicon-king"></span></a>
-                            </li>
-                        {% endif %}
+                {% if user.is_superuser %}
+                    <li style="background-color: #DBC6EB">
+                        <a href="/admin">Администрирование<span style="font-size:16px;"
+                                                                class="pull-right hidden-xs showopacity glyphicon glyphicon-king"></span></a>
+                    </li>
+                {% endif %}
 
-                        {% if user.is_authenticated %}
-                            <li style="background-color: #FFCCCC">
-                                <a href="{% url 'signout' %}">Выйти<span style="font-size:16px;"
-                                                                         class="pull-right hidden-xs showopacity glyphicon glyphicon-log-out"></span></a>
-                            </li>
-                        {% else %}
-                            <li {% block signin_active %}{% endblock %} style="background-color: #CCFFFF">
-                                <a href="{% url 'signin' %}">Войти<span style="font-size:16px;"
-                                                                        class="pull-right hidden-xs showopacity glyphicon glyphicon-log-in"></span></a>
-                            </li>
-                            <li {% block signup_active %}{% endblock %} style="background-color: #CCFFCC">
-                                <a href="{% url 'signup' %}">Регистрация<span style="font-size:16px;"
-                                                                              class="pull-right hidden-xs showopacity glyphicon glyphicon-pencil"></span></a>
-                            </li>
-                        {% endif %}
-                    </ul>
-                </div>
-            </div>
-        </nav>
-
-
-        <div class="content-block main">
-            {% block content %}
-            {% endblock %}
+                {% if user.is_authenticated %}
+                    <li style="background-color: #FFCCCC">
+                        <a href="{% url 'signout' %}">Выйти<span style="font-size:16px;"
+                                                                 class="pull-right hidden-xs showopacity glyphicon glyphicon-log-out"></span></a>
+                    </li>
+                {% else %}
+                    <li {% block signin_active %}{% endblock %} style="background-color: #CCFFFF">
+                        <a href="{% url 'signin' %}">Войти<span style="font-size:16px;"
+                                                                class="pull-right hidden-xs showopacity glyphicon glyphicon-log-in"></span></a>
+                    </li>
+                    <li {% block signup_active %}{% endblock %} style="background-color: #CCFFCC">
+                        <a href="{% url 'signup' %}">Регистрация<span style="font-size:16px;"
+                                                                      class="pull-right hidden-xs showopacity glyphicon glyphicon-pencil"></span></a>
+                    </li>
+                {% endif %}
+            </ul>
         </div>
+    </div>
+</nav>
 
-        
-        <script src="https://code.jquery.com/jquery-3.1.0.min.js"></script>
-        <!-- Latest compiled and minified JavaScript -->
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"
-                integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
-                crossorigin="anonymous"></script>
 
-        <!-- Yandex.Metrika counter -->
-        <script type="text/javascript">
-            (function (d, w, c) {
-                (w[c] = w[c] || []).push(function () {
-                    try {
-                        w.yaCounter47614906 = new Ya.Metrika({
-                            id: 47614906,
-                            clickmap: true,
-                            trackLinks: true,
-                            accurateTrackBounce: true
-                        });
-                    } catch (e) {
-                    }
+<div class="content-block main">
+    {% block content %}
+    {% endblock %}
+</div>
+
+
+<script src="https://code.jquery.com/jquery-3.1.0.min.js"></script>
+<!-- Latest compiled and minified JavaScript -->
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"
+        integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
+        crossorigin="anonymous"></script>
+
+<!-- Yandex.Metrika counter -->
+<script type="text/javascript">
+    (function (d, w, c) {
+        (w[c] = w[c] || []).push(function () {
+            try {
+                w.yaCounter47614906 = new Ya.Metrika({
+                    id: 47614906,
+                    clickmap: true,
+                    trackLinks: true,
+                    accurateTrackBounce: true
                 });
+            } catch (e) {
+            }
+        });
 
-                var n = d.getElementsByTagName("script")[0],
-                    s = d.createElement("script"),
-                    f = function () {
-                        n.parentNode.insertBefore(s, n);
-                    };
-                s.type = "text/javascript";
-                s.async = true;
-                s.src = "https://mc.yandex.ru/metrika/watch.js";
+        var n = d.getElementsByTagName("script")[0],
+            s = d.createElement("script"),
+            f = function () {
+                n.parentNode.insertBefore(s, n);
+            };
+        s.type = "text/javascript";
+        s.async = true;
+        s.src = "https://mc.yandex.ru/metrika/watch.js";
 
-                if (w.opera == "[object Opera]") {
-                    d.addEventListener("DOMContentLoaded", f, false);
-                } else {
-                    f();
-                }
-            })(document, window, "yandex_metrika_callbacks");
-        </script>
+        if (w.opera == "[object Opera]") {
+            d.addEventListener("DOMContentLoaded", f, false);
+        } else {
+            f();
+        }
+    })(document, window, "yandex_metrika_callbacks");
+</script>
 
-        <noscript>
-            <div><img src="https://mc.yandex.ru/watch/47614906" style="position:absolute; left:-9999px;" alt=""/></div>
-        </noscript>
-        <!-- /Yandex.Metrika counter -->
+<noscript>
+    <div><img src="https://mc.yandex.ru/watch/47614906" style="position:absolute; left:-9999px;" alt=""/></div>
+</noscript>
+<!-- /Yandex.Metrika counter -->
 
-        {% block js %}
-        {% endblock %}
+{% block js %}
+{% endblock %}
 
-    </body>
+</body>
 
 </html>
