--- a/cloud/templates/main_template.html
+++ b/cloud/templates/main_template.html
@@ -20,7 +20,6 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto+Slab" rel="stylesheet">
 
     <link rel="icon" href="{% static 'img/favicon.png' %}">
-    <link rel="shortcut icon" type="image/png" href="{{ STATIC_URL }}/favicon.png"/>
 
     {% block head %}
     {% endblock %}
@@ -40,7 +39,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a id="menu-brand" class="navbar-brand" href="{% url 'post_list' %}"><img id="picloud-logo"
+            <a id="menu-brand" class="navbar-brand" href="{% url 'index' %}"><img id="picloud-logo"
                                                                                       src="{% static 'img/piLogo.png' %}"
                                                                                       alt="logo"></a>
         </div>
@@ -62,7 +61,7 @@
                 </li>
 
                 {% if user.is_authenticated and request.session.program_id %}
-                    <li>
+                    <li {% block my_program %}{% endblock %}>
                         <a href="{% url 'program_page' program_id=request.session.program_id %}">Моя программа<span
                                 style="font-size:16px;"
                                 class="pull-right hidden-xs showopacity glyphicon glyphicon-heart"></span></a>
