Заменить дефисы на тире там, где надо

--- a/cloud/templates/cloud/post_edit.html
+++ b/cloud/templates/cloud/post_edit.html
@@ -26,7 +26,7 @@
 
                     <div class="panel panel-info">
                         <div class="panel-heading" data-toggle="collapse" href="#structure">
-                            Университет - Факультет - Кафедра - Программа обучения
+                            Университет — Факультет — Кафедра — Программа обучения
                         </div>
                     </div>
                     <div id="structure" class="collapse">
