--- a/cloud/templates/settings.html
+++ b/cloud/templates/settings.html
@@ -170,7 +170,7 @@
 
                     <div class="panel panel-info">
                         <div class="panel-heading" data-toggle="collapse" href="#structure">
-                            Университет - Факультет - Кафедра
+                            Университет — Факультет — Кафедра
                         </div>
                     </div>
                     <div id="structure" class="collapse">
