--- a/cloud/templates/structure/subject_page.html
+++ b/cloud/templates/structure/subject_page.html
@@ -20,7 +20,7 @@
                 <h3> {{ subject.title }} </h3>
 
                 {% if subject.lecturer != none %}
-                    <h5>Лектор - {{ subject.lecturer }}</h5>
+                    <h5>Лектор — {{ subject.lecturer }}</h5>
                 {% endif %}
                 {% if subject.semestr != 0 %}
                     <h5> Семестр {{ subject.semestr }}</h5>
