Исправлен костыль автофокуса на странице профиля

--- a/cloud/templates/settings.html
+++ b/cloud/templates/settings.html
@@ -14,7 +14,7 @@
     <div class="container-fluid no-margin-padding">
 
         {% comment %} TODO убрать это дерьмо {% endcomment %}
-        <input style="display: none; visibility: hidden; position: absolute" autofocus>
+        <input style="visibility: hidden; position: absolute" autofocus>
 
         <div class="post-panel panel-settings">
 
