Исправлены грамматические и речевые ошибки

--- a/cloud/templates/auth/acc_active_email.html
+++ b/cloud/templates/auth/acc_active_email.html
@@ -1,9 +1,9 @@
-
 {% autoescape off %}
-    Привет {{ user.username }},
-    Для подтверждения регистрации на афигительном портале перейди по ссылке:
-    http://{{ domain }}{% url 'activate' uid=uid token=token %}
+    Привет, {{ user.username }}!
 
-    Всего самого лучшего!
+    Для подтверждения регистрации на PiCloud перейди по ссылке:
+    https://{{ domain }}{% url 'activate' uid=uid token=token %}
+
+    Всего самого хорошего!
     Команда PiCloud.
 {% endautoescape %}
