--- a/cloud/templates/main_template.html
+++ b/cloud/templates/main_template.html
@@ -87,7 +87,7 @@
                         {% endcomment %}
 
                 <li {% block universities_active %}{% endblock %}>
-                    <a href="{% url 'universities_list' %}">ВУЗы<span style="font-size:16px;"
+                    <a href="{% url 'universities_list' %}">Вузы<span style="font-size:16px;"
                                                                       class="pull-right hidden-xs showopacity glyphicon glyphicon-education"></span></a>
                 </li>
                 <li {% block contacts_active %}{% endblock %}>
