--- a/cloud/templates/search.html
+++ b/cloud/templates/search.html
@@ -127,7 +127,7 @@
                 });
                 update_markdown();
             } else {
-                $('#search_results').append("<div class='search-post-panel' style='padding: 10px;'>К сожалению по вашему запросу ничего не найдено :(</div>");
+                $('#search_results').append("<div class='search-post-panel' style='padding: 10px;'>К сожалению, по вашему запросу ничего не найдено :(</div>");
             }
         }
 
